Fix search forms not showing up

--- a/css/layout.scss
+++ b/css/layout.scss
@@ -157,9 +157,6 @@ body {
     transform: translate(-50%, -1px);
 }
 
-#entity-list .basico-form-field,
-#var-list .basico-form-field,
-
 /* Connection buttons */
 #connection-buttons {
     position: absolute;
